2020-05-09  Jose E. Marchesi  <jemarch@gnu.org>

	* MI foundations.

2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>

	* poke/pk-ios.c (pk_cmd_load_file): Amend OOM message to
	be the same everywhere ("No memory" to "Out of memory").
	(pk_cmd_mem): Likewise.

2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>

	* poke/pk-cmd.c: Do not include gettext.h and pk-term.h.
	* poke/pk-def.c: Likewise.
	* poke/pk-ios.c: Likewise.
	* poke/pk-repl.c: Likewise.
	* poke/pk-set.c: Likewise.
	* poke/pk-editor.c: Do not include pk-term.h.
	* poke/pk-hserver.c: Likewise.
	* poke/pk-misc.c: Likewise.
	* poke/pk-vm.c: Likewise.

2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>

	* poke/poke.h: New function pk_assert_alloc.
	Include stdlib.h, gettext.h and pk-term.h.
	* poke/poke.c (initialize_user): Make use of pk_assert_alloc.
	Remove including gettext.h and pk-term.h.

2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/ios.c (ios_open): Initialize error varaible.
	* libpoke/ios-dev-file.c (ios_dev_file_handler_normalize):
	Return NULL on memory allocation error.
	* libpoke/ios-dev-mem.c (ios_dev_mem_handler_normalize): Likewise.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_handler_normalize): Likewise.

2020-05-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: Remove xstrndup from libpoke_modules.
	* libpoke/pkl-trans.c (pkl_trans1_ps_print_stmt):  Use strndup
	instead of xstrndup.

2020-05-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pkl-fold.c (OP_BINARY_SSS): Check return value of
	pk_str_concat.
	* libpoke/pkl.c (pkl_new): Likewise.
	* poke/pk-cmd.c (pk_cmd_exec): Likewise.
	* poke/poke.c (initialize_user): Likewise.

2020-05-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: Remove xalloc from libutils_modules.
	* libutils/pk-utils.c (pk_str_concat): Use malloc instead of xmalloc.

2020-05-05  Tim Rühsen  <tim.ruehsen@gmx.de>

	* .gitignore: Add /gl-libpoke.
	* Makefile.am: Add gl-libpoke to SUBDIRS.
	* bootstrap.conf: Invoke gnulib-tool to generate gl-libpoke.