@@ -64,6 +64,7 @@ libutils_modules="
 
 # gnulib modules used in libpoke/.
 libpoke_modules="
+  dirname
   fstat
   gcd
   gettext-h
